Fixing footer layout on mobile viewports

--- a/packages/bpk-docs/src/layouts/DefaultLayout/default-layout.scss
+++ b/packages/bpk-docs/src/layouts/DefaultLayout/default-layout.scss
@@ -14,11 +14,14 @@
     }
 
     &-copyright {
+      width: 45%;
       float: left;
     }
 
     &-toggle {
+      width: 45%;
       float: right;
+      text-align: right;
     }
   }
 }
